# SupportGPT

./: .env.example  .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  requirements.txt
supportgpt/: demo.py
supportgpt/sources/: forum.py  research.py
tests/: test_forum_source.py
